--- a/js/index.html
+++ b/js/index.html
@@ -16,8 +16,8 @@
       margin: 0;
       background-color: #111;
       overflow: scroll;
-  -ms-overflow-style: none;  /* For Internet Explorer and Edge */
-  scrollbar-width: none;     /* For Firefox */
+      -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+      scrollbar-width: none;     /* For Firefox */
     }
 
     .model-container {
@@ -39,16 +39,21 @@
     }
 
     @font-face {
-  font-family: 'DarkSame';
-  src: url('/js/DarksameRegular.ttf') format('truetype');
-}
-.kiss-frame {
-  width: 100%; /* Adjust width as needed */
-  height: 500px; /* Adjust height as needed */
-  border: none;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  margin-top: 20px;
-}
+      font-family: 'DarkSame';
+      src: url('/js/DarksameRegular.ttf') format('truetype');
+    }
+
+    .kiss-frame, .ticket-frame, .footer-container, .game-frame {
+      width: 100%; 
+      height: 600px; 
+      border: none;
+      box-shadow: 0 4px 8px#111;
+      margin-top: 20px;
+    }
+
+    .footer-container {
+      height: 350px;
+    }
 
     .overlay-text {
       position: absolute;
@@ -78,45 +83,35 @@
       color: #fff;
       cursor: pointer;
     }
+
     .code-overlay {
-    position: absolute;
-    top: 10%; 
-    left: 5%; 
-    color: #00ff00;
-    font-family:  monospace;
-    font-size: 14px;
-    line-height: 1.4;
-    white-space: pre-wrap;
-    pointer-events: none;
-    z-index: 2; /* Keep it above the model */
-    animation: scrollCode 10s linear infinite;
-    animation-delay: 1ms;
-    text-shadow: 
-    0 0 5px #00ff00, 
-    0 0 10px #00ff00, 
-    0 0 20px #00ff00, 
-    0 0 30px #00ff00, 
-    0 0 40px #00ff00;
-  }
-  @keyframes scrollCode {
+      position: absolute;
+      top: 10%; 
+      left: 5%; 
+      color: #00ff00;
+      font-family: monospace;
+      font-size: 14px;
+      line-height: 1.4;
+      white-space: pre-wrap;
+      pointer-events: none;
+      z-index: 2;
+      animation: scrollCode 10s linear infinite;
+      animation-delay: 1ms;
+      text-shadow: 
+        0 0 5px #00ff00, 
+        0 0 10px #00ff00, 
+        0 0 20px #00ff00, 
+        0 0 30px #00ff00, 
+        0 0 40px #00ff00;
+    }
+
+    @keyframes scrollCode {
       from {
         transform: translateY(100%);
       }
       to {
         transform: translateY(-100%);
       }
-    }
-    .ticket-frame, .footer-container {
-      width: 100%; 
-      height: 500px; 
-      border: none;
-      display: block;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      overflow: hidden;
-    }
-
-    .footer-container {
-      height: 350px;
     }
   </style>
 </head>
@@ -208,11 +203,15 @@
     });
   }
 </script>
+
 <!-- Ticket Section -->
 <iframe src="Tickets.html" class="ticket-frame"></iframe>
 
+<!-- Eyes Section -->
 <iframe src="eyes.html" class="kiss-frame"></iframe>
 
+<!-- Game Section -->
+<iframe src="game.html" class="game-frame"></iframe>
 
 <!-- Footer Section -->
 <iframe src="footer.html" class="footer-container"></iframe>
