changed the path of html files

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     @font-face {
       font-family: 'DarkSame';
-      src: url('/js/DarksameRegular.ttf') format('truetype');
+      src: url('/DarksameRegular.ttf') format('truetype');
     }
 
     .kiss-frame, .ticket-frame, .footer-container, .game-frame {
@@ -120,7 +120,7 @@
 <!-- Container for 3D Model -->
 <div class="model-container">
   <model-viewer 
-    src="../models/Tuliips.glb" 
+    src="/models/Tuliips.glb" 
     alt="A 3D model of tulips"
     auto-rotate
     shadow-intensity="1"
@@ -205,16 +205,16 @@
 </script>
 
 <!-- Ticket Section -->
-<iframe src="Tickets.html" class="ticket-frame"></iframe>
+<iframe src="/tickets.html" class="ticket-frame"></iframe>
 
 <!-- Eyes Section -->
-<iframe src="eyes.html" class="kiss-frame"></iframe>
+<iframe src="/eyes.html" class="kiss-frame"></iframe>
 
 <!-- Game Section -->
-<iframe src="game.html" class="game-frame"></iframe>
+<iframe src="/game.html" class="game-frame"></iframe>
 
 <!-- Footer Section -->
-<iframe src="footer.html" class="footer-container"></iframe>
+<iframe src="/footer.html" class="footer-container"></iframe>
 
 </body>
 </html>
