--- a/eyes.html
+++ b/eyes.html
@@ -63,21 +63,21 @@
   <div 
     class="eye-btn" 
     onclick="showMessage('hers')" 
-    style="background-image: url('/imgs/hers.jpeg');"
+    style="background-image: url('imgs/hers.jpeg');"
     title="Her Eyes"
   ></div>
   
   <div 
     class="eye-btn" 
     onclick="showMessage('mine')" 
-    style="background-image: url('/imgs/785b8b81-e4b6-44ab-8f70-5e6f143a71de.jpeg');"
+    style="background-image: url('imgs/785b8b81-e4b6-44ab-8f70-5e6f143a71de.jpeg');"
     title="My Eyes"
   ></div>
   
   <div 
     class="eye-btn" 
     onclick="showMessage('slash')" 
-    style="background-image: url('/imgs/slash.jpeg');"
+    style="background-image: url('imgs/slash.jpeg');"
     title="Slash's Eyes"
   ></div>
 </div>
