--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     @font-face {
       font-family: 'DarkSame';
-      src: url('/DarksameRegular.ttf') format('truetype');
+      src: url('DarksameRegular.ttf') format('truetype');
     }
 
     .kiss-frame, .ticket-frame, .footer-container, .game-frame {
@@ -69,7 +69,7 @@
       white-space: nowrap;
       z-index: 1;
     }
-
+/*dont touch */
     .arrow-container {
       margin-top: 5px;
       display: flex;
@@ -96,7 +96,7 @@
       pointer-events: none;
       z-index: 2;
       animation: scrollCode 10s linear infinite;
-      animation-delay: 1ms;
+      animation-delay: 1s;
       text-shadow: 
         0 0 5px #00ff00, 
         0 0 10px #00ff00, 
@@ -120,7 +120,7 @@
 <!-- Container for 3D Model -->
 <div class="model-container">
   <model-viewer 
-    src="/models/Tuliips.glb" 
+    src="models/Tuliips.glb" 
     alt="A 3D model of tulips"
     auto-rotate
     shadow-intensity="1"
@@ -205,16 +205,16 @@
 </script>
 
 <!-- Ticket Section -->
-<iframe src="/tickets.html" class="ticket-frame"></iframe>
+<iframe src="tickets.html" class="ticket-frame"></iframe>
 
 <!-- Eyes Section -->
-<iframe src="/eyes.html" class="kiss-frame"></iframe>
+<iframe src="eyes.html" class="kiss-frame"></iframe>
 
 <!-- Game Section -->
-<iframe src="/game.html" class="game-frame"></iframe>
+<iframe src="game.html" class="game-frame"></iframe>
 
 <!-- Footer Section -->
-<iframe src="/footer.html" class="footer-container"></iframe>
+<iframe src="footer.html" class="footer-container"></iframe>
 
 </body>
 </html>
