--- a/tickets.html
+++ b/tickets.html
@@ -232,104 +232,104 @@
     <div class="scroller-container">
         <div class="scroller">
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.14 PM.jpeg" alt="Ticket 1" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.14 PM.jpeg" alt="Ticket 1" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.15 PM (1).jpeg" alt="Ticket 2" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.15 PM (1).jpeg" alt="Ticket 2" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.30 PM.jpeg" alt="Ticket 3" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.30 PM.jpeg" alt="Ticket 3" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.16 PM (1).jpeg" alt="Ticket 4" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.16 PM (1).jpeg" alt="Ticket 4" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.16 PM (2).jpeg" alt="Ticket 5" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.16 PM (2).jpeg" alt="Ticket 5" />
           </div>
          
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.17 PM (1).jpeg" alt="Ticket 7" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.17 PM (1).jpeg" alt="Ticket 7" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.17 PM (2).jpeg" alt="Ticket 8" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.17 PM (2).jpeg" alt="Ticket 8" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.17 PM.jpeg" alt="Ticket 9" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.17 PM.jpeg" alt="Ticket 9" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.18 PM (1).jpeg" alt="Ticket 10" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.18 PM (1).jpeg" alt="Ticket 10" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.18 PM (2).jpeg" alt="Ticket 11" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.18 PM (2).jpeg" alt="Ticket 11" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.18 PM.jpeg" alt="Ticket 12" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.18 PM.jpeg" alt="Ticket 12" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.20 PM.jpeg" alt="Ticket 13" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.20 PM.jpeg" alt="Ticket 13" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.21 PM (1).jpeg" alt="Ticket 14" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.21 PM (1).jpeg" alt="Ticket 14" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.21 PM.jpeg" alt="Ticket 15" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.21 PM.jpeg" alt="Ticket 15" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.22 PM (1).jpeg" alt="Ticket 16" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.22 PM (1).jpeg" alt="Ticket 16" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.22 PM.jpeg" alt="Ticket 17" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.22 PM.jpeg" alt="Ticket 17" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.23 PM.jpeg" alt="Ticket 18" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.23 PM.jpeg" alt="Ticket 18" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.24 PM (1).jpeg" alt="Ticket 19" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.24 PM (1).jpeg" alt="Ticket 19" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.24 PM.jpeg" alt="Ticket 20" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.24 PM.jpeg" alt="Ticket 20" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.25 PM (1).jpeg" alt="Ticket 21" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.25 PM (1).jpeg" alt="Ticket 21" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.25 PM (2).jpeg" alt="Ticket 22" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.25 PM (2).jpeg" alt="Ticket 22" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.25 PM.jpeg" alt="Ticket 23" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.25 PM.jpeg" alt="Ticket 23" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.26 PM.jpeg" alt="Ticket 24" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.26 PM.jpeg" alt="Ticket 24" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.27 PM (1).jpeg" alt="Ticket 25" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.27 PM (1).jpeg" alt="Ticket 25" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.27 PM (2).jpeg" alt="Ticket 26" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.27 PM (2).jpeg" alt="Ticket 26" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.27 PM.jpeg" alt="Ticket 27" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.27 PM.jpeg" alt="Ticket 27" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.28 PM (1).jpeg" alt="Ticket 28" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.28 PM (1).jpeg" alt="Ticket 28" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.28 PM.jpeg" alt="Ticket 29" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.28 PM.jpeg" alt="Ticket 29" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.29 PM (1).jpeg" alt="Ticket 30" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.29 PM (1).jpeg" alt="Ticket 30" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.29 PM (2).jpeg" alt="Ticket 31" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.29 PM (2).jpeg" alt="Ticket 31" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.29 PM.jpeg" alt="Ticket 32" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.29 PM.jpeg" alt="Ticket 32" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.30 PM (1).jpeg" alt="Ticket 33" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.30 PM (1).jpeg" alt="Ticket 33" />
           </div>
           <div class="ticket">
-            <img src="/imgs/WhatsApp Image 2025-03-15 at 3.36.15 PM.jpeg" alt="Ticket 34" />
+            <img src="imgs/WhatsApp Image 2025-03-15 at 3.36.15 PM.jpeg" alt="Ticket 34" />
           </div>
 
         </div>
